dropshot/tests/fail/bad_channel9.stderr
error[E0277]: the trait bound `dropshot::Query<QueryParams>: RequestContextArgument` is not satisfied
  --> tests/fail/bad_channel9.rs:24:8
   |
24 |     _: Query<QueryParams>,
   |        ^^^^^ the trait `RequestContextArgument` is not implemented for `dropshot::Query<QueryParams>`
   |
   = help: the trait `RequestContextArgument` is implemented for `RequestContext<T>`

error[E0277]: the trait bound `dropshot::Query<QueryParams>: RequestContextArgument` is not satisfied
  --> tests/fail/bad_channel9.rs:19:1
   |
19 | / #[channel {
20 | |     protocol = WEBSOCKETS,
21 | |     path = "/test",
22 | | }]
   | |__^ the trait `RequestContextArgument` is not implemented for `dropshot::Query<QueryParams>`
   |
   = help: the trait `RequestContextArgument` is implemented for `RequestContext<T>`
   = note: this error originates in the attribute macro `channel` (in Nightly builds, run with -Z macro-backtrace for more info)
